update order choice question (#245)
